# piglets

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: publish.yml
examples/: dual-pathway-pruning-open-ai-bigquery-example.ipynb  dual-pathway-pruning-vertex-ai-duckdb-example.ipynb
examples/scripts/: create_example_db.py
src/piglets/: __init__.py
src/piglets/database/: __init__.py  database_connector.py
src/piglets/database/url/: __init__.py  bigquery.py  duckdb.py  motherduck.py  snowflake.py  url.py
src/piglets/planning/: __init__.py
src/piglets/planning/logical_planning/: __init__.py  logical_planner.md  logical_planner.py
src/piglets/pruning/: __init__.py  pruner.py
src/piglets/types/: __init__.py  database.py  plans.py  pruning.py
src/piglets/utils/: __init__.py  mardown_handling.py
tests/: conftest.py
tests/integration/database/: test_database_connection_int.py
tests/integration/planning/: test_planning_int.py
tests/integration/pruning/: test_pruning_int.py
tests/planning/: test_planning_int.py
tests/unit/database/: test_database_connector.py  test_url_builders.py
tests/unit/planning/: test_logical_planning_resources.py
tests/unit/types/: test_database.py
