[project]
name = "piglets"
version = "0.1.4"
description = "A modular text-to-SQL toolkit."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.0",
    "pydantic>=2",
]

[project.optional-dependencies]
openai = [
    "langchain-openai>=1.0",
]

[dependency-groups]
dev = [
    "build>=1.4.3",
    "twine>=6.2.0",
]
test = [
    "pytest>=8.0",
    "langchain-openai>=1.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"piglets.planning.logical_planning" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra"]
